For #118, corrected old CSS that prevents the <a> elements beneath our species page image gallery from collapsing to zero content width (because it was the <img> tags inside them that were being styled instead of the <a> tags themselves).

--- a/gobotany/static/css/styles.css
+++ b/gobotany/static/css/styles.css
@@ -1745,12 +1745,11 @@ div.section.namap div.trans {
     position: relative;
     width: 700px;
 }
-#taxon #species-images div.scrollableArea img {
+#taxon #species-images div.scrollableArea > * {
     border-right: 5px solid #fff;
     float: left;
     margin: 0;
     padding: 0;
-    position: relative;
 }
 
 /* Shadowbox tweaks to allow multiple title lines, for presenting a
